--- a/content/blog/champ/index.en.Rmd
+++ b/content/blog/champ/index.en.Rmd
@@ -17,6 +17,11 @@ image:
   focal_point: ''
   preview_only: no
 projects: []
+links:
+- icon: twitter
+  icon_pack: fab
+  name: Follow
+  url: https://twitter.com/johnny_stats
 ---
 
 ```{r}
