--- a/content/blog/champ/index.en.Rmd
+++ b/content/blog/champ/index.en.Rmd
@@ -2,18 +2,18 @@
 title: The Blog of Champions
 author: John Thomas
 date: '2022-01-06'
-slug: champ
+slug: new_slug
 categories:
   - R
 tags:
   - Demo
-subtitle: ''
-summary: ''
+subtitle: 'This is the subtitle'
+summary: 'But aye, this here be the summary.'
 authors: []
 lastmod: '2022-01-06T14:55:25-05:00'
 featured: yes
 image:
-  caption: ''
+  caption: 'Hover on the picture'
   focal_point: ''
   preview_only: no
 projects: []
