--- a/content/blog/champ/index.en.Rmd
+++ b/content/blog/champ/index.en.Rmd
@@ -1,5 +1,5 @@
 ---
-title: The Blog of Champions
+title: The Blog of Champions!
 author: John Thomas
 date: '2022-01-06'
 slug: new_slug
@@ -19,9 +19,9 @@ image:
 projects: []
 links:
 - icon: twitter
-  icon_pack: fab
-  name: Follow
-  url: https://twitter.com/johnny_stats
+- icon_pack: fab
+- name: Follow
+- url: https://twitter.com/johnny_stats
 ---
 
 ```{r}
