--- a/content/blog/champ/index.en.Rmd
+++ b/content/blog/champ/index.en.Rmd
@@ -17,9 +17,9 @@ image:
   focal_point: ''
   preview_only: no
 links:
-  icon: twitter
-  icon_pack: fab
-  name: Follow
+  icon: "twitter"
+  icon_pack: "fab"
+  name: "Follow"
   url: "https://twitter.com/johnny_stats"
 projects: []
 ---
