--- a/content/blog/champ/index.en.Rmd
+++ b/content/blog/champ/index.en.Rmd
@@ -21,7 +21,7 @@ links:
   - icon: "twitter"
     icon_pack: "fab"
     name: "Follow"
-    url: "https://twitter.com/johnny_stats"
+    url: "https://twitter.com/data_visi0n"
 ---
 
 ```{r}
